src/test/ui/unreachable/unwarned-match-on-never.stderr
error: unreachable expression
  --> $DIR/unwarned-match-on-never.rs:10:5
   |
LL |     match x {}
   |     ---------- diverging due to this
LL |     // But matches in unreachable code are warned.
LL |     match x {}
   |     ^^^^^^^^^^ unreachable expression
   |
note: lint level defined here
  --> $DIR/unwarned-match-on-never.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable arm
  --> $DIR/unwarned-match-on-never.rs:15:15
   |
LL |     match (return) {
   |           -------- diverging due to this
LL |         () => ()
   |               ^^ unreachable arm

error: unreachable expression
  --> $DIR/unwarned-match-on-never.rs:21:5
   |
LL |       return;
   |       ------ diverging due to this
LL | /     match () {
LL | |         () => (),
LL | |     }
   | |_____^ unreachable expression

error: aborting due to 3 previous errors

